bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:3: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  if(a+b=10){
      ^Makes10:5: error: reassignment to val
  } else if (a=10) {
              ^Makes10:7: error: reassignment to val
  } else if (b=10){
              ^